feat(semaforo): se actualizo el semadforo